--- a/portfolio.html
+++ b/portfolio.html
@@ -54,8 +54,9 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <div>
+                        <div><h4>LIRI</h4><a href="https://github.com/RaMbo8315/liri-node-app">
                             <img class="pics" src="assets/images/11.jpg">
+                        </a>
                         </div>
                         <div>
                             <img class="pics" src="assets/images/6.jpg">
