--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,9 @@
                             <img class="pics" src="assets/images/11.jpg">
                         </a>
                         </div>
-                        <div><h4>Constructor-hangman</h4><a href="https://github.com/RaMbo8315/constructor-hangman"></a>
+                        <div><h4>Constructor-hangman</h4><a href="https://github.com/RaMbo8315/constructor-hangman">
                             <img class="pics" src="assets/images/6.jpg">
+                        </a>
                         </div>
                         <div>
                             <img class="pics" src="assets/images/9.jpg">
