--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,9 @@
                             <img class="pics" src="assets/images/11.jpg">
                         </a>
                         </div>
-                        <div>
-                            <img class="pics" src="assets/images/6.jpg">     
+                        <div><h4>Bamzon Store</h4><a href="https://rambo8315.github.io/bamazon/">
+                            <img class="pics" src="assets/images/6.jpg">  
+                        </a>
                         </div>
                         <div>
                             <img class="pics" src="assets/images/9.jpg">
