--- a/portfolio.html
+++ b/portfolio.html
@@ -62,8 +62,9 @@
                             <img class="pics" src="assets/images/6.jpg">  
                         </a>
                         </div>
-                        <div>
+                        <div><h4>Friend-Finder</h4><a href="https://github.com/RaMbo8315/friend-finder">
                             <img class="pics" src="assets/images/9.jpg">
+                        </a>
                         </div>
                     </div>
                     <div class="col-md-6">
