--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                             <img class="pics" src="assets/images/6.jpg">  
                         </a>
                         </div>
-                        <div><h4>Friend-Finder</h4><a href="https://github.com/RaMbo8315/friend-finder">
+                        <div><h4>Friend-Finder</h4><a href="https://frozen-beyond-22352.herokuapp.com/">
                             <img class="pics" src="assets/images/9.jpg">
                         </a>
                         </div>
