--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
                             <img class="pics" src="assets/images/11.jpg">
                         </a>
                         </div>
-                        <div><h4>Bamzon Store</h4><a href="https://rambo8315.github.io/bamazon/">
+                        <div><h4>Bamazon Store</h4><a href="https://rambo8315.github.io/bamazon/">
                             <img class="pics" src="assets/images/6.jpg">  
                         </a>
                         </div>
@@ -73,7 +73,7 @@
                             <img class="pics" src="assets/images/4.jpg">
                          </a>
                         </div>
-                        <div><h4>Burger</h4><a href="https://fathomless-gorge-48146.herokuapp.com/">
+                        <div><h4>NYTReactSearch</h4><a href="https://secret-brook-89359.herokuapp.com/">
                             <img class="pics" src="assets/images/10.jpg">
                         </a>
                         </div>
